client/app/bundles/App/AppTopNavigation/Index.scss
:local {
  .topnav {
    overflow: hidden;
    background-color: #f4f4f4;
  }

  .topnav a {
    float: left;
    display: block;
    color: #007cc3;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
    font-weight: 200;
  }

  .topnav a:hover,
  .topnav a:focus {
    background-color: #ddd;
    color: black;
    outline: none;
  }

  .topnav .topnav-icon {
    display: none;
  }

  @media screen and (max-width: 600px) {
    .topnav a:not(:first-child) {display: none;}
    .topnav a.topnav-icon {
      float: right;
      display: block;
      cursor: pointer;
    }
  }

  @media screen and (max-width: 600px) {
    .topnav.responsive {position: relative;}
    .topnav.responsive .topnav-icon {
      position: absolute;
      right: 0;
      top: 0;
    }
    .topnav.responsive a {
      float: none;
      display: block;
      text-align: left;
    }

  }
}

